brat/test/golden/error/nameclash2.brat.golden
Error in test/golden/error/nameclash2.brat@2:1-16
type A(x,y) = y
^^^^^^^^^^^^^^^

  Name clash: Identifier `A` is already used

